# yinyou

./: .gitignore
install/: local_setup.sh  setup.sh
log/: latest_build
src/answer/: CMakeLists.txt  package.xml
src/answer/src/: click.h  image.h  image_process.cpp  line_detector.h  main.cpp  rect_detector.h  show.cpp
